@@ -1,8 +1,4 @@
 %%% ml.tex, main file of TeX paper
-%%% 13. 1.1997, Gernot Salzer: initial version
-%%% ??.11.1997, Wolfram Nix: preliminaries, lots of definitions, theorems etc added.
-%%% 31.10.2020, Richard Zach: Bring this into the 21st century! Also, add tableaux
-%%%  9. 5.2021, Gernot Salzer: appendix with specification of logic
 
 \documentclass{article}
 \usepackage{latexsym}
@@ -43,6 +39,8 @@
     \fi
     \@FORnext
    }
+
+\def\texExtra#1#2#3{\@ifundefined{#1}{#3}{#2}}
 \makeatother
 
 \newcommand\TV     [1]{\csname TV\romannumeral#1\endcsname}
@@ -132,20 +130,27 @@ ClQuprem\romannumeral#1X\romannumeral#2\endcsname}
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 
+% TeX commands specific to the particular logic; written by "ml_tex.pl".
+\usepackage{\jobname}
 
-\usepackage{\jobname} % TeX commands specific to the particular logic; written by "ml_tex.pl".
+\texExtra{FullNameOfLogic}{\let\NameOfLogic\FullNameOfLogic}{\apptocmd{\NameOfLogic}{\ logic}{}{}}
 
-\title{Analytic Proof Systems for \ecapitalisewords{\NameOfLogic}
-Logic}
+\title{Analytic Proof Systems for \ecapitalisewords{\NameOfLogic}\texExtra{ShortName}{~\ShortName}{\relax}}
 
-\author{M.~Ultlog\thanks{Generated by \href{https://github.com/rzach/multlog}{\textsc{multlog}},
-v.~@ml_version@ from the specification of \NameOfLogic\ logic in the appendix.}}
-\date{}
+\author{M.~Ultlog\thanks{Cite as: Multlog (\Year), ``Analytic proof systems for {\NameOfLogic}\texExtra{ShortName}{~\ShortName}{\relax}.'' [PDF file generated
+by MULTLOG, v.~@ml_version@, \url{https://logic.at/multlog}].
+\texExtra{Link}{Available from \url{\Link}.}{}\newline\newline See
+\IfFileExists{\jobname.cfg}{\cref{lgc,cfg}}{\cref{lgc}} for
+the specification of {\NameOfLogic}.}}
+
 
 \makeatletter
-\hypersetup{pdftitle={\@title},pdfauthor={\@author},pdfkeywords={{\NameOfLogic}
-logic, sequent calculus, tableaux, natural deduction, resolution}}
+\hypersetup{pdftitle={\@title},pdfauthor={\@author},pdfkeywords={\NameOfLogic, sequent calculus, tableaux, natural deduction, resolution}}
+
+\texExtra{Preamble}{\Preamble}{\relax}
+
 \makeatother
+
 
 \begin{document}
 
@@ -153,15 +158,16 @@ logic, sequent calculus, tableaux, natural deduction, resolution}}
 
 \begin{abstract}
 We give sequent calculus, analytic tableaux, natural deduction, and
-clause translation systems for resolution for \NameOfLogic\ logic.
+clause translation systems for resolution for
+\NameOfLogic\texExtra{ShortName}{~\ShortName}{\relax}.
 \end{abstract}
 
 \section{Introduction}
 
 In this paper we present calculi for
-\NameOfLogic{} logic%
+\NameOfLogic{}\texExtra{ShortName}{~\ShortName}{}%
 \makeatletter\@ifundefined{b@ml}{}{ \citep{ml}}\makeatother.
-\emakefirstuc{\NameOfLogic} logic has \numtoname{\NoTVs} truth values
+\emakefirstuc{\NameOfLogic} has \numtoname{\NoTVs} truth values
 $\TVss$ (with $\DTVss$ designated), \ifnum\NoQus=0 and
 \fi
 \ifnum\NoOps>0
@@ -179,6 +185,8 @@ $\TVss$ (with $\DTVss$ designated), \ifnum\NoQus=0 and
    \ENDFOR
 \fi. Its syntax and semantics is detailed in \cref{sec:prelim}.
 
+\texExtra{Intro}{\Intro}{\relax}
+
 We first present a \NoTVs-sided sequent calculus in
 \cref{sec:sequent}. The fundamental idea for many-sided sequent
 calculi for finite-valued logics goes back to
@@ -191,12 +199,12 @@ and Maehara lemma.
 Signed tableau systems for finite-valued logics were proposed by
 \citet{Surma1977} and \citet{Carnielli1987}, and generalized by
 \citet{Hahnle1993}. In \cref{sec:tableaux}, we present a signed
-tableau system for \NameOfLogic\ logic.
+tableau system for \NameOfLogic.
 
 Many-valued natural deduction systems for finite-valued logics have
 been investigated by \citet{BaazFermullerZach1993b} and
 \citet{Zach1993}. We give the introduction and elimination rules for
-the natural deduction system for \NameOfLogic\ logic in
+the natural deduction system for \NameOfLogic{} in
 \cref{sec:natural}.
 
 In addition to H\"ahnle's work on tableaux-based theorem proving for
@@ -218,7 +226,7 @@ developed by Salzer~\cite{Salzer1996a,Salzer2000}.
 
 % Giving different defs for propositional logic
 \ifprop
-   The \emph{propositional language~\LL\/} for \NameOfLogic{} logic consists of
+   The \emph{propositional language~\LL\/} for \NameOfLogic{} consists of
    \begin{enumerate}
    \item propositional variables: $x_0, x_1, x_2, \ldots$
    \ifnum\NoOps>0
@@ -245,7 +253,7 @@ developed by Salzer~\cite{Salzer1996a,Salzer2000}.
    \ifnum\NoOps=0 
       Every propositional variable and every propositional connective of
       arity~0, called a propositional constant, is a \emph{formula}. It is
-      called \emph{atomic} or an \emph{atom}. \NameOfLogic\ logic only
+      called \emph{atomic} or an \emph{atom}. \NameOfLogic{} only
       contains atomic formulas.
    \else
       \emph{Formulas} are defined inductively:
@@ -267,14 +275,14 @@ developed by Salzer~\cite{Salzer1996a,Salzer2000}.
       \end{enumerate}
    \fi 
 \else
-   The \emph{first order language~\LL\/} for \NameOfLogic{} logic
+   The \emph{first order language~\LL\/} for \NameOfLogic{}
    consists of
    \begin{enumerate}
    \item free variables: $a_0, a_1, a_2, \ldots$
    \item bound variables: $x_0, x_1, x_2, \ldots$
-   \item function symbols of arity $i (i \in {\bf N})$, including constants:
+   \item function symbols of arity $i$ $(i \in \mathbb{N})$, including constants:
          $f_0^i, f_1^i, f_2^i, \ldots$
-   \item predicate constants of arity $i (i \in {\bf N})$:
+   \item predicate constants of arity $i$ $(i \in \mathbb{N})$:
          $P_0^i, P_1^i, P_2^i, \ldots$
    \ifnum\NoOps>0 
    \item
@@ -397,9 +405,11 @@ sequences and sets of
 \end{definition}
 \fi
 
+\texExtra{Semantics}{\Semantics}{\relax}
+
 %%% Matrix
 \begin{definition}
-The \emph{matrix} for \NameOfLogic\ logic is given by:
+The \emph{matrix} for \NameOfLogic{} is given by:
 \begin{enumerate}
 \item the set of \emph{truth values}
       $\TVs=\{\TVss\}$,
@@ -474,7 +484,7 @@ The set of \emph{undesignated values} is $\TVs^- = \TVs\setminus
 \ifnum\NoQus=0
    \ifnum\NoOps=0
    \else
-%      The \NameOfLogic\ logic is purely propositional: it contains no
+%      The \NameOfLogic{} is purely propositional: it contains no
 %      quantifiers.
    \fi
 \else
@@ -602,7 +612,7 @@ The set of \emph{undesignated values} is $\TVs^- = \TVs\setminus
 \fi
 
 
-\section{Sequent calculus for \NameOfLogic\ Logic}\label{sec:sequent}
+\section{Sequent calculus for \NameOfLogic}\label{sec:sequent}
 
 
 %%% Syntax & Semantics of Sequents, Sequent Calculus
@@ -653,7 +663,7 @@ so that $\I \models \Gamma$ and \emph{valid\/} iff for every interpretation
 \end{proposition}
 
 \begin{definition}
-The \emph{sequent calculus} for \NameOfLogic\ logic is given by:
+The \emph{sequent calculus} for \NameOfLogic{} is given by:
 \begin{enumerate}
 \item axiom schemas of the form $[\TVs \colon A]$,  % 1
 \item weakening rules for every truth value~$v$:       % 2
@@ -753,14 +763,14 @@ A sequent is provable if and only if it is valid.
 \end{proof}
 
 \begin{corollary}
-   In \NameOfLogic\ logic, $\models A$ iff $[\DTVss\colon A]$ has a
+   In \NameOfLogic, $\models A$ iff $[\DTVss\colon A]$ has a
    sequent proof, and $\Delta \models A$ iff $[\NDTVss\colon \Delta],
    [\DTVss\colon A]$ has a proof.
 \end{corollary}
 
 \begin{theorem}
    The cut rule is eliminable in the sequent calculus for
-   \NameOfLogic\ logic.
+   \NameOfLogic.
 \end{theorem}
 
 \begin{proof}
@@ -768,18 +778,17 @@ See Theorem 4.1 of \citet{BaazFermullerZach1994} or Theorem 3.5.3 of
 \citet{Zach1993}.
 \end{proof}
 
-\section{Tableaux for \NameOfLogic\ logic}\label{sec:tableaux}
+\section{Tableaux for \NameOfLogic}\label{sec:tableaux}
 
 Although the method of \citet{Surma1977} and \citet{Carnielli1987} for
-obtaining signed analytic tableaux systems applies to \NameOfLogic{}
-logic, it has a drawback.  As \citet{Hahnle1993} pointed out, to show
-that a formula is valid, it is required to provide as many closed
-tableaux as there are non-designated values.  This is usually not
-desirable; the generalized approach by \citet{Hahnle1993} solves this
-problem. Below we give a tableau system for \NameOfLogic{} logic using
-the sets of signs $\TVs \setminus \{v\}$, i.e., the tableau system
-exactly dual to that of Carnielli (in the sense of
-\cite{BaazFermullerZach1993}).
+obtaining signed analytic tableaux systems applies to \NameOfLogic, it
+has a drawback.  As \citet{Hahnle1993} pointed out, to show that a
+formula is valid, it is required to provide as many closed tableaux as
+there are non-designated values.  This is usually not desirable; the
+generalized approach by \citet{Hahnle1993} solves this problem. Below
+we give a tableau system for \NameOfLogic{} using the sets of signs
+$\TVs \setminus \{v\}$, i.e., the tableau system exactly dual to that
+of Carnielli (in the sense of \cite{BaazFermullerZach1993}).
 
 \begin{definition}
    A \emph{signed formula} is an expression of the form $v \colon A$
@@ -852,13 +861,13 @@ exactly dual to that of Carnielli (in the sense of
 \end{proof}
 
 \begin{corollary}
-   In \NameOfLogic{} logic, $\models A$ iff $\{v \colon A \mid v \in
+   In \NameOfLogic, $\models A$ iff $\{v \colon A \mid v \in
    \TVs^+\}$ has a closed tableau. $\Delta \models A$ iff
    $\{v \colon B \mid v \in \TVs^-, B \in \Delta\} \cup \{v \colon A
    \mid v \in \TVs^+\}$ has a closed tableau.
 \end{corollary}
 
-\section{Natural deduction for \NameOfLogic\ logic}\label{sec:natural}
+\section{Natural deduction for \NameOfLogic}\label{sec:natural}
 
 
 %%% Natural Deduction Systems, Formulation
@@ -874,7 +883,7 @@ the obvious way:
 \end{eqnarray*}
 
 \begin{definition}
-The \emph{natural deduction rules} for \NameOfLogic\ logic are given by:
+The \emph{natural deduction rules} for \NameOfLogic{} are given by:
 \begin{enumerate}
 \item A weakening rule for all $v \in \TVs^+$:
       \[
@@ -962,7 +971,7 @@ A \emph{natural deduction derivation} is defined inductively as follows:
 
 \begin{theorem}
 A partial sequent $\Gamma^+$ can be derived from the assumptions
-$\Gamma^-$ in the natural deduction system for \NameOfLogic\ iff, for
+$\Gamma^-$ in the natural deduction system for \NameOfLogic{} iff, for
 every interpretation~$\I$, either some formula in $\Gamma^-_v$ ($v \in
 \TVs^-$) evaluates to the truth value~$v$, or there is a $w \in
 \TVs^+$ and a formula in $\Gamma^+_w$ that evaluates to $w$.
@@ -979,11 +988,11 @@ every interpretation~$\I$, either some formula in $\Gamma^-_v$ ($v \in
 \end{corollary}
 
 
-\section{Resolution and clause formation rules for \NameOfLogic\ logic}\label{sec:clauses}
+\section{Resolution and clause formation rules for \NameOfLogic}\label{sec:clauses}
 
 The many-valued resolution calculus of \citet{BaazFermuller1995}
-applies to \NameOfLogic\ logic. We present the framework here, as well
-as a language preserving clause translation system for \NameOfLogic\ logic.
+applies to \NameOfLogic. We present the framework here, as well
+as a language preserving clause translation system for \NameOfLogic.
 
 \begin{definition}[Signed formula]
    A \emph{signed formula} is an expression of the form $A^v$, where
@@ -1135,11 +1144,11 @@ $T(\C)$ contains only signed atoms%
 
 \appendix
 
-\section{\jobname.lgc~-- specification of \NameOfLogic\ logic}
+\section{\jobname.lgc~-- specification of \NameOfLogic}\label{lgc}
 \lstinputlisting[basicstyle=\footnotesize\ttfamily,breaklines]{\jobname.lgc.stripped}
 
 \IfFileExists{\jobname.cfg}{%
-  \section{\jobname.cfg~-- \LaTeX\ translations}
+  \section{\jobname.cfg~-- \LaTeX\ translations}\label{cfg}
   \lstinputlisting[basicstyle=\footnotesize\ttfamily,breaklines]{\jobname.cfg}
 }{}
 
